--- a/style.css
+++ b/style.css
@@ -12,17 +12,25 @@ body{
 nav {
     background-color: var(--cor2);
     height: 80px;
+    width: auto;
     display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    align-self: center;
+
+   
+    
 
 }
 
 nav div {
-    justify-content: space-around;
-    text-align: end;
+    margin-right: 160px;
     word-spacing: 66px;
 }
 
 nav a{
+
     color: black;
     text-decoration: none;
     font-family: Nunito;
@@ -35,16 +43,65 @@ nav a{
 }
 
 
-/* nav {
-    padding: 0;
-    display: block;
-    justify-content: flex-end;
-    align-items: center;
-    margin-right: 160px;
-    text-align: end;
-    word-spacing: 66px;
-} */
 
-img {
-    margin-left: 160px;
+
+
+
+.gatosfileira1 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    margin-top: 80px;
+   
+}
+
+.gatosfileira2 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.gatosfileira3 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.gatosfileira4 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.gatosfileira5 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.gatosfileira6 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    background-color: var(--cor2);
+    padding: 0;
+    margin-top: 82px;
+    height: 80px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+
+
+
+}
+
+h1 {
+    font-family: Nunito;
+    font-size: 16px;
+    font-weight: 700;
 }
