--- a/style.css
+++ b/style.css
@@ -14,20 +14,19 @@ nav {
     height: 80px;
     width: auto;
     display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    align-self: center;
-
+    justify-content: space-between;
    
     
 
 }
 
-nav div {
+nav span {
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
     margin-right: 160px;
     word-spacing: 66px;
-}
+} 
 
 nav a{
 
@@ -40,6 +39,10 @@ nav a{
     letter-spacing: 0em;
    
     
+}
+
+.gatologo {
+    margin-left: 160px;
 }
 
 
@@ -105,3 +108,4 @@ h1 {
     font-size: 16px;
     font-weight: 700;
 }
+
